# foundry-ai-basics

./: .env  .gitignore  README.md  clients.py  config.py  display.py  foundry-agent-interpreter.py  foundry-ai-basics.bicep  foundry-ai-basics.sh  main.py  pyproject.toml  requirements.txt  safety.py
src/foundry_ai_basics/: main.py
src/foundry_ai_basics/ai/: prompts.py  routing.py
src/foundry_ai_basics/azure_clients/: clients.py
src/foundry_ai_basics/presentation/: display.py
